# msgspec-cbor

./: .gitignore  .mcp.json  .python-version  HANDOFF.md  README.md  pyproject.toml  tasks.py
.claude/: settings.json
.claude/agents/: camas-fixer.md
.claude/skills/gate/: SKILL.md
.github/workflows/: ci.yaml
src/msgspec_cbor/: __init__.py
tests/: test_cbor.py
